<resources>
    <string name="app_name">TZ_LightIT</string>
    <string name="email_addres">Enter LogIn</string>
    <string name="sign_up">SignUp</string>
    <string name="view_products">View Products</string>
    <string name="log_in">LogIn</string>
    <string name="welcome">Welcome</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Names</string>
    <string name="password">Password</string>
    <string name="login_error">LogIn must count > 6 letters</string>
    <string name="password_error">Password must contain title letter and digits</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>


</resources>
